// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`基础渲染 1`] = `
<div
  className="sc-gtssRu cxGVge sinoui-steps"
>
  <div
    className="sc-crzoUp bHkhhO sinoui-step"
    onClick={[Function]}
  >
    <div
      className="sc-fFSRdu cKxIsS sinoui-step-container"
    >
      <div
        className="sc-hBMVcZ hwjZox sinoui-step-icon"
      >
        1
      </div>
      <div
        className="sc-ksluoS dWjjYo sinoui-step-content"
      >
        <span
          className="sc-dIsAE gWoXit sinoui-step-title"
        >
          第一步
        </span>
      </div>
    </div>
  </div>
  <div
    className="sc-eCApGN jMOvUe sinoui-step-connector"
  >
    <hr
      className="sc-bdnylx sc-dlnjPT oMesJ fTxljK sinoui-divider"
    />
  </div>
  <div
    className="sc-crzoUp bHkhhO sinoui-step"
    onClick={[Function]}
  >
    <div
      className="sc-fFSRdu cKxIsS sinoui-step-container"
    >
      <div
        className="sc-hBMVcZ fLyGFy sinoui-step-icon"
      >
        2
      </div>
      <div
        className="sc-ksluoS dWjjYo sinoui-step-content"
      >
        <span
          className="sc-dIsAE cfOsOg sinoui-step-title"
        >
          第二步
        </span>
      </div>
    </div>
  </div>
  <div
    className="sc-eCApGN jMOvUe sinoui-step-connector"
  >
    <hr
      className="sc-bdnylx sc-dlnjPT oMesJ fTxljK sinoui-divider"
    />
  </div>
  <div
    className="sc-crzoUp bHkhhO sinoui-step"
    onClick={[Function]}
  >
    <div
      className="sc-fFSRdu cKxIsS sinoui-step-container"
    >
      <div
        className="sc-hBMVcZ fLyGFy sinoui-step-icon"
      >
        3
      </div>
      <div
        className="sc-ksluoS dWjjYo sinoui-step-content"
      >
        <span
          className="sc-dIsAE cfOsOg sinoui-step-title"
        >
          第三步
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`正确渲染--垂直方向步进器 1`] = `
<div
  className="sc-gtssRu jebBEV sinoui-steps sinoui-steps--vertical"
  direction="vertical"
>
  <div
    className="sc-jSFkmK kqaYcK sinoui-step"
    onClick={[Function]}
  >
    <div
      className="sc-kEqYlL hamvQv sinoui-step-container"
    >
      <span
        className="sc-jrsJCI iEMaco sinoui-step-icon"
      >
        <div
          className="sc-pNWxx hZtzoU sinoui-step-icon"
        >
          1
        </div>
      </span>
      <div
        className="sc-fujyUd hVdEak sinoui-step-content"
      >
        <span
          className="sc-gKAblj kGlIOq sinoui-step-title"
        >
          第一步
        </span>
      </div>
      <div
        className="sc-eCApGN jMOvUe sinoui-step-connector"
      >
        <hr
          className="sc-bdnylx sc-dlnjPT dagirI iQbjqF sinoui-divider sinoui-divider--vertical"
        />
      </div>
    </div>
  </div>
  <div
    className="sc-jSFkmK kqaYcK sinoui-step"
    onClick={[Function]}
  >
    <div
      className="sc-kEqYlL hamvQv sinoui-step-container"
    >
      <span
        className="sc-jrsJCI iEMaco sinoui-step-icon"
      >
        <div
          className="sc-pNWxx fYCQBr sinoui-step-icon"
        >
          2
        </div>
      </span>
      <div
        className="sc-fujyUd hVdEak sinoui-step-content"
      >
        <span
          className="sc-gKAblj dbNxUn sinoui-step-title"
        >
          第二步
        </span>
      </div>
      <div
        className="sc-eCApGN jMOvUe sinoui-step-connector"
      >
        <hr
          className="sc-bdnylx sc-dlnjPT dagirI iQbjqF sinoui-divider sinoui-divider--vertical"
        />
      </div>
    </div>
  </div>
  <div
    className="sc-jSFkmK kqaYcK sinoui-step"
    onClick={[Function]}
  >
    <div
      className="sc-kEqYlL hamvQv sinoui-step-container"
    >
      <span
        className="sc-jrsJCI iEMaco sinoui-step-icon"
      >
        <div
          className="sc-pNWxx fYCQBr sinoui-step-icon"
        >
          3
        </div>
      </span>
      <div
        className="sc-fujyUd hVdEak sinoui-step-content"
      >
        <span
          className="sc-gKAblj dbNxUn sinoui-step-title"
        >
          第三步
        </span>
      </div>
      <div
        className="sinoui-step-connector"
      />
    </div>
  </div>
</div>
`;

exports[`正确渲染--垂直方向步进器且标签垂直布局 1`] = `
<div
  className="sc-gtssRu jCWFpU sinoui-steps sinoui-steps--vertical"
  direction="vertical"
>
  <div
    className="sc-jSFkmK kqaYcK sinoui-step"
    onClick={[Function]}
  >
    <div
      className="sc-kEqYlL hamvQv sinoui-step-container"
    >
      <span
        className="sc-jrsJCI iEMaco sinoui-step-icon"
      >
        <div
          className="sc-pNWxx hZtzoU sinoui-step-icon"
        >
          1
        </div>
      </span>
      <div
        className="sc-fujyUd hVdEak sinoui-step-content"
      >
        <span
          className="sc-gKAblj kGlIOq sinoui-step-title"
        >
          第一步
        </span>
      </div>
      <div
        className="sc-eCApGN jMOvUe sinoui-step-connector"
      >
        <hr
          className="sc-bdnylx sc-dlnjPT dagirI iQbjqF sinoui-divider sinoui-divider--vertical"
        />
      </div>
    </div>
  </div>
  <div
    className="sc-jSFkmK kqaYcK sinoui-step"
    onClick={[Function]}
  >
    <div
      className="sc-kEqYlL hamvQv sinoui-step-container"
    >
      <span
        className="sc-jrsJCI iEMaco sinoui-step-icon"
      >
        <div
          className="sc-pNWxx fYCQBr sinoui-step-icon"
        >
          2
        </div>
      </span>
      <div
        className="sc-fujyUd hVdEak sinoui-step-content"
      >
        <span
          className="sc-gKAblj dbNxUn sinoui-step-title"
        >
          第二步
        </span>
      </div>
      <div
        className="sc-eCApGN jMOvUe sinoui-step-connector"
      >
        <hr
          className="sc-bdnylx sc-dlnjPT dagirI iQbjqF sinoui-divider sinoui-divider--vertical"
        />
      </div>
    </div>
  </div>
  <div
    className="sc-jSFkmK kqaYcK sinoui-step"
    onClick={[Function]}
  >
    <div
      className="sc-kEqYlL hamvQv sinoui-step-container"
    >
      <span
        className="sc-jrsJCI iEMaco sinoui-step-icon"
      >
        <div
          className="sc-pNWxx fYCQBr sinoui-step-icon"
        >
          3
        </div>
      </span>
      <div
        className="sc-fujyUd hVdEak sinoui-step-content"
      >
        <span
          className="sc-gKAblj dbNxUn sinoui-step-title"
        >
          第三步
        </span>
      </div>
      <div
        className="sinoui-step-connector"
      />
    </div>
  </div>
</div>
`;

exports[`正确渲染--标签垂直布局 1`] = `
<div
  className="sc-gtssRu ixuNXn sinoui-steps"
>
  <div
    className="sc-crzoUp inqkZB sinoui-step"
    onClick={[Function]}
  >
    <div
      className="sc-eCApGN jMOvUe sinoui-step-connector"
    >
      <hr
        className="sc-bdnylx sc-dlnjPT oMesJ fTxljK sinoui-divider"
      />
    </div>
    <div
      className="sc-fFSRdu cKxIsS sinoui-step-container sinoui-step-container--vertical"
    >
      <div
        className="sc-hBMVcZ hwjZox sinoui-step-icon"
      >
        1
      </div>
      <div
        className="sc-ksluoS dWjjYo sinoui-step-content"
      >
        <span
          className="sc-dIsAE gWoXit sinoui-step-title"
        >
          第一步
        </span>
      </div>
    </div>
  </div>
  <div
    className="sc-crzoUp inqkZB sinoui-step"
    onClick={[Function]}
  >
    <div
      className="sc-eCApGN jMOvUe sinoui-step-connector"
    >
      <hr
        className="sc-bdnylx sc-dlnjPT oMesJ fTxljK sinoui-divider"
      />
    </div>
    <div
      className="sc-fFSRdu cKxIsS sinoui-step-container sinoui-step-container--vertical"
    >
      <div
        className="sc-hBMVcZ fLyGFy sinoui-step-icon"
      >
        2
      </div>
      <div
        className="sc-ksluoS dWjjYo sinoui-step-content"
      >
        <span
          className="sc-dIsAE cfOsOg sinoui-step-title"
        >
          第二步
        </span>
      </div>
    </div>
  </div>
  <div
    className="sc-crzoUp inqkZB sinoui-step"
    onClick={[Function]}
  >
    <div
      className="sc-fFSRdu cKxIsS sinoui-step-container sinoui-step-container--vertical"
    >
      <div
        className="sc-hBMVcZ fLyGFy sinoui-step-icon"
      >
        3
      </div>
      <div
        className="sc-ksluoS dWjjYo sinoui-step-content"
      >
        <span
          className="sc-dIsAE cfOsOg sinoui-step-title"
        >
          第三步
        </span>
      </div>
    </div>
  </div>
</div>
`;
